--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -24,7 +24,6 @@ jobs:
 
   integration-tests:
    runs-on: ubuntu-latest
-   needs: unit-tests
 
    steps:
     - name: Checkout code
@@ -46,7 +45,7 @@ jobs:
 
   docker: 
     runs-on: ubuntu-latest
-    needs: integration-tests
+    needs: [unit-tests, integration-tests]
 
     steps:
       - name: Checkout
