--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,6 +1,10 @@
-on: [push, pull_request]
-branches:
-   - master
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   unit-tests:
