--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -57,9 +57,9 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.MARIAS_SECRET }}
       - name: Build image
-        run: docker build -t ghcr.io/umm-a/cicd-assignment -f Dockerfile .
+        run: docker build -t ghcr.io/umm-a/cicd-assignment:${{ github.head_ref }} -f Dockerfile .
       - name: Push image
-        run: docker push ghcr.io/umm-a/cicd-assignment
+        run: docker push ghcr.io/umm-a/cicd-assignment:${{ github.head_ref }}
 
   fake-deployment: 
     runs-on: ubuntu-latest
@@ -71,4 +71,4 @@ jobs:
       - name: Fake Deploy - Display Docker image name
         run: "echo Docker image would be: $IMAGE"
         env:
-         IMAGE: ${{ github.repository }}:${{ github.head_ref }}
+         IMAGE: ${{ github.repository }}:${{ github.head_ref }}"
