--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -71,4 +71,4 @@ jobs:
       - name: Fake Deploy - Display Docker image name
         run: "echo Docker image would be: $IMAGE"
         env:
-         IMAGE: ${{ github.repository }}:${{ github.head_ref }}
+         IMAGE: ${{ github.repository }}:${{ github.head_ref }}"
