tag in master.yml changed

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -63,9 +63,9 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.MARIAS_SECRET }}
       - name: Build image
-        run: docker build -t ghcr.io/umm-a/${{ github.repository }} -f Dockerfile .
+        run: docker build -t ghcr.io/umm-a/cicd-assignment -f Dockerfile .
       - name: Push image
-        run: docker push ghcr.io/umm-a/${{ github.repository }}
+        run: docker push ghcr.io/umm-a/cicd-assignment ghcr.io/umm-a/cicd-assignment:latest
 
   fake-deployment:
     runs-on: ubuntu-latest
